--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,3 +7,11 @@ body{
 h1{
     color: darkred;
 }
+
+#container{
+    width: 70%; 
+    padding: 1em 1em 1em 2em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 20 auto;
+}
