--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,8 +10,18 @@ h1{
 
 #container{
     width: 70%; 
-    padding: 1em 1em 1em 2em;
+    padding: 0em 0em 0em 2em;
     text-align: left;
     border: 1px solid #DDD;
     margin: 20 auto;
+}
+
+#cabecera{
+    background: #33a;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+    color: white;
+    font-weight: bold;
+    font-size: 24;
+    margin: 0;
+    padding: 0.5em;
 }
