--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,40 +1,60 @@
 body{
     color: darkblue;
+    background: rgb(39, 39, 39);
     text-align: center;
     font-family: "Helvetica";
 }
 
 h1{
     color: rgb(11, 184, 89);
+    font-size: 48;
+}
+
+#subtitulo{
+    font-size: 22;
+}
+
+#tagline{
+    font-size: 16;
+    padding-left: 2em;
 }
 
 #container{
+    background: whitesmoke;
     border-radius: 2em;
     width: 70%; 
-    padding: 0em 0em 0em 2em;
+    padding-left: 2em;
+    padding-bottom: 1em;
     text-align: left;
     border: 1px solid #DDD;
     margin: 20 auto;
 }
 
 #cabecera{
+    width: 100%;
+    height: 5%;
     background: #33a;
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
-    color: rgb(250, 150, 150);
+    color: rgb(255, 255, 255);
     font-weight: bold;
     font-size: 24;
-    margin: 0;
-    padding: 0.5em;
+    margin-left: -1.35em;
+    padding-left: 1.35em;
+    padding-top: 0.5em;
+    padding-bottom: 0.1em;
+    border-top-right-radius: 1.3em;
+    border-top-left-radius: 1.3em;
 }
 
 #parrafos{
-    border-radius: 1em;
+    border-radius: 1.5em;
+    font-size: 20;
     width: 70%;
     margin: 20 auto;
     background: whitesmoke;
     text-align: left;
     border: 1px solid #DDD;
-    font-family: "courier";
+    font-family: "arial";
     color: darkred;
-    padding: 2em;
+    padding: 1em;
 }
