Cambio de color de fuente

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -66,5 +66,5 @@ h1{
     background: seashell;
     font-weight: 30;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: sienna;
+    color: black;
 }
